--- a/.github/workflows/workflow-main.yml
+++ b/.github/workflows/workflow-main.yml
@@ -89,4 +89,4 @@ jobs:
           ref: ${{ inputs.checkout_ref }}
       - uses: dtolnay/rust-toolchain@stable
       - name: Publish
-        run: cargo publish
+        run: cargo publish --token=${{ secrets.CARGO_REGISTRY_TOKEN }}
