--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ glob = "0.3.1"
 roxmltree = "0.19.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.116"
+url = "2.5.0"
 
 [dev-dependencies]
 assert_json = "0.1.0"
